# pharma-mcp-agent

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/ct/agent/: mcp_stdio.py
src/ct/tools/: _tool_classification.md
