[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drug-discovery-mcp"
version = "0.1.2"
description = "Drug discovery research agent — 190+ tools as an MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tcr" },
]

dependencies = [
    "mcp>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "nbformat>=5.7",
]

[project.optional-dependencies]
notebook = [
    "nbconvert>=7.0",
]
chemistry = [
    "rdkit>=2023.03",
]
biology = [
    "biopython>=1.81",
]
singlecell = [
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
]
ml = [
    "torch>=2.0",
    "transformers>=4.40",
    "fair-esm>=2.0",
]
analysis = [
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]
all = [
    "rdkit>=2023.03",
    "biopython>=1.81",
    "scanpy>=1.9",
    "anndata>=0.10",
    "celltypist>=1.6",
    "cellxgene-census>=1.0",
    "tiledbsoma>=1.0",
    "torch>=2.0",
    "transformers>=4.40",
    "fair-esm>=2.0",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
ct-mcp-server = "ct.agent.mcp_stdio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ct"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests hitting real APIs (use --run-e2e)",
    "docker: tests requiring Docker (use --run-e2e)",
    "e2e_matrix: optional live multi-prompt end-to-end matrix (set CT_RUN_E2E_MATRIX=1)",
    "api_smoke: optional live API smoke tests (set CT_RUN_API_SMOKE=1)",
]
